--- a/04_上下文增强RAG.ipynb
+++ b/04_上下文增强RAG.ipynb
@@ -130,10 +130,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the OpenAI client with the base URL and API key\n",
+    "# 我们使用硅基流动提供的模型服务，需要先注册账号并申请API key，硅基流动官网：https://www.siliconflow.cn/\n",
     "client = OpenAI(\n",
-    "    base_url=\"https://api.studio.nebius.com/v1/\",\n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\")  # Retrieve the API key from environment variables\n",
+    "    base_url=\"https://api.siliconflow.cn/v1/\",\n",
+    "    api_key=\"sk-xqmgohpohqgwmrislttlkiodikjzoscyvqdgjmfguvfjodwe\"  # 替换为你的API密钥\n",
     ")"
    ]
   },
