--- a/21_强化学习RAG.ipynb
+++ b/21_强化学习RAG.ipynb
@@ -96,12 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up the API connection using the OpenAI client\n",
-    "# Replace the base_url and api_key with your own values\n",
-    "\n",
+    "# 我们使用硅基流动提供的模型服务，需要先注册账号并申请API key，硅基流动官网：https://www.siliconflow.cn/\n",
     "client = OpenAI(\n",
-    "    base_url=\"https://api.studio.nebius.com/v1/\",  # Base URL for (eg. ollama api, anyother llm api provider)\n",
-    "    api_key= os.environ[\"OPENAI_API_KEY\"]  # API key for authentication \n",
+    "    base_url=\"https://api.siliconflow.cn/v1/\",\n",
+    "    api_key=\"sk-xqmgohpohqgwmrislttlkiodikjzoscyvqdgjmfguvfjodwe\"  # 替换为你的API密钥\n",
     ")"
    ]
   },
