--- a/04_上下文增强RAG.ipynb
+++ b/04_上下文增强RAG.ipynb
@@ -8,18 +8,23 @@
     }
    },
    "source": [
-    "## Context-Enriched Retrieval in RAG\n",
+    "## Context-Enriched Retrieval in RAG \n",
+    "## 上下文增强检索在RAG中的应用\n",
+    "\n",
     "Retrieval-Augmented Generation (RAG) enhances AI responses by retrieving relevant knowledge from external sources. Traditional retrieval methods return isolated text chunks, which can lead to incomplete answers.\n",
+    "检索增强生成（RAG）通过从外部来源检索相关知识来增强AI的回答。传统的检索方法返回孤立的文本块，这可能导致回答不完整。\n",
     "\n",
     "To address this, we introduce Context-Enriched Retrieval, which ensures that retrieved information includes neighboring chunks for better coherence.\n",
+    "为了解决这个问题，我们引入了上下文增强检索，它确保检索到的信息包含邻近片段，以实现更好的连贯性。\n",
     "\n",
-    "Steps in This Notebook:\n",
-    "- Data Ingestion: Extract text from a PDF.\n",
-    "- Chunking with Overlapping Context: Split text into overlapping chunks to preserve context.\n",
-    "- Embedding Creation: Convert text chunks into numerical representations.\n",
-    "- Context-Aware Retrieval: Retrieve relevant chunks along with their neighbors for better completeness.\n",
-    "- Response Generation: Use a language model to generate responses based on retrieved context.\n",
-    "- Evaluation: Assess the model's response accuracy."
+    "\n",
+    "Steps in This Notebook: 本笔记本的步骤如下：\n",
+    "- Data Ingestion: Extract text from a PDF. 数据获取：从PDF中提取文本。\n",
+    "- Chunking with Overlapping Context: Split text into overlapping chunks to preserve context. 分块并保持上下文：将文本分成重叠的块，以保留上下文。\n",
+    "- Embedding Creation: Convert text chunks into numerical representations. 嵌入创建：将文本块转换为数值表示。\n",
+    "- Context-Aware Retrieval: Retrieve relevant chunks along with their neighbors for better completeness. 上下文感知检索：检索相关块及其近邻，以实现更好的完整性。\n",
+    "- Response Generation: Use a language model to generate responses based on retrieved context. 响应生成：使用语言模型基于检索到的上下文生成响应。\n",
+    "- Evaluation: Assess the model's response accuracy. 评估：评估模型响应的准确性。"
    ]
   },
   {
@@ -499,7 +504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -513,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
