--- a/04_上下文增强RAG.ipynb
+++ b/04_上下文增强RAG.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(text, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(text, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Creates embeddings for the given text using the specified OpenAI model.\n",
     "\n",
@@ -271,7 +271,7 @@
     "def context_enriched_search(query, text_chunks, embeddings, k=1, context_size=1):\n",
     "    \"\"\"\n",
     "    Retrieves the most relevant chunk along with its neighboring chunks.\n",
-    "\n",
+    "    检索与查询最相关的文本块，并返回该块及其相邻的上下文块。\n",
     "    Args:\n",
     "    query (str): Search query.\n",
     "    text_chunks (List[str]): List of text chunks.\n",
@@ -430,7 +430,7 @@
     "# Define the system prompt for the AI assistant\n",
     "system_prompt = \"You are an AI assistant that strictly answers based on the given context. If the answer cannot be derived directly from the provided context, respond with: 'I do not have enough information to answer that.'\"\n",
     "\n",
-    "def generate_response(system_prompt, user_message, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_response(system_prompt, user_message, model=\"THUDM/GLM-4-9B-0414\"):\n",
     "    \"\"\"\n",
     "    Generates a response from the AI model based on the system prompt and user message.\n",
     "\n",
@@ -470,26 +470,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the evaluation criteria, I would assign a score of 0.8 to the AI assistant's response.\n",
       "\n",
-      "The response is very close to the true response, and it correctly conveys the main idea of Explainable AI (XAI) and its importance. The AI assistant's response is also well-structured and easy to understand, which is a positive aspect.\n",
+      "### Evaluation Score: 1\n",
       "\n",
-      "However, there are a few minor differences between the AI assistant's response and the true response. The AI assistant's response is slightly more detailed and provides additional points (1-4) that are not present in the true response. Additionally, the AI assistant's response uses more formal language and phrases, such as \"In essence,\" which is not present in the true response.\n",
+      "#### Detailed Explanation:\n",
       "\n",
-      "Despite these minor differences, the AI assistant's response is still very close to the true response, and it effectively conveys the main idea of XAI and its importance. Therefore, I would assign a score of 0.8.\n"
+      "The AI assistant's response aligns very closely with the true response in both content and intent. Let's break down the comparison:\n",
+      "\n",
+      "1. **Definition of Explainable AI (XAI):**\n",
+      "   - **AI Response:** \"Explainable AI (XAI) refers to techniques that aim to make AI decisions more understandable, enabling users to assess their fairness and accuracy.\"\n",
+      "   - **True Response:** \"Explainable AI (XAI) aims to make AI systems more transparent and understandable, providing insights into how they make decisions.\"\n",
+      "   \n",
+      "   The AI response accurately captures the essence of XAI by emphasizing its goal of making AI decisions understandable and assessable for fairness and accuracy. The true response also highlights the transparency and the provision of insights into decision-making processes, which are consistent with the AI's description. Both responses convey that XAI is about making AI systems more comprehensible.\n",
+      "\n",
+      "2. **Importance of Explainable AI (XAI):**\n",
+      "   - **AI Response:** \"It is considered important because transparency and explainability are key to building trust in AI. Making AI systems understandable and providing insights into their decision-making processes helps users assess their reliability and fairness.\"\n",
+      "   - **True Response:** \"It's considered important for building trust, accountability, and ensuring fairness in AI systems.\"\n",
+      "   \n",
+      "   The AI response correctly identifies the importance of XAI in building trust, which is a key aspect mentioned in the true response. Additionally, the AI response mentions \"accountability\" and \"fairness,\" which are also central themes in the true response. The true response explicitly mentions these aspects, and the AI response covers them adequately, albeit with slightly different phrasing.\n",
+      "\n",
+      "Overall, the AI assistant's response is comprehensive and accurate, closely matching the true response in both the definition and the importance of XAI. There are no significant omissions or inaccuracies, and the response effectively conveys the core concepts.\n",
+      "\n",
+      "Therefore, the score of 1 is justified, as the AI response is very close to the true response.\n"
      ]
     }
    ],
    "source": [
     "# Define the system prompt for the evaluation system\n",
-    "evaluate_system_prompt = \"You are an intelligent evaluation system tasked with assessing the AI assistant's responses. If the AI assistant's response is very close to the true response, assign a score of 1. If the response is incorrect or unsatisfactory in relation to the true response, assign a score of 0. If the response is partially aligned with the true response, assign a score of 0.5.\"\n",
+    "evaluate_system_prompt = \"You are an intelligent evaluation system tasked with assessing the AI assistant's responses. If the AI assistant's response is very close to the true response, assign a score of 1. If the response is incorrect or unsatisfactory in relation to the true response, assign a score of 0. If the response is partially aligned with the true response, assign a score of 0.5.give a detailed explanation of your evaluation.\"\n",
     "\n",
     "# Create the evaluation prompt by combining the user query, AI response, true response, and evaluation system prompt\n",
     "evaluation_prompt = f\"User Query: {query}\\nAI Response:\\n{ai_response.choices[0].message.content}\\nTrue Response: {data[0]['ideal_answer']}\\n{evaluate_system_prompt}\"\n",
