--- a/05_上下文分块标题.ipynb
+++ b/05_上下文分块标题.ipynb
@@ -9,19 +9,23 @@
    },
    "source": [
     "# Contextual Chunk Headers (CCH) in Simple RAG\n",
+    "# 上下文分块标题（CCH）在简单RAG中的应用\n",
     "\n",
     "Retrieval-Augmented Generation (RAG) improves the factual accuracy of language models by retrieving relevant external knowledge before generating a response. However, standard chunking often loses important context, making retrieval less effective.\n",
+    "检索增强生成（RAG）通过在生成响应之前检索相关的外部知识来提高语言模型的事实准确性。然而，标准分块往往会丢失重要的上下文信息，从而降低检索效果。\n",
     "\n",
     "Contextual Chunk Headers (CCH) enhance RAG by prepending high-level context (like document titles or section headers) to each chunk before embedding them. This improves retrieval quality and prevents out-of-context responses.\n",
+    "上下文分块标题（CCH）通过在每个分块之前将高级上下文（如文档标题或部分标题）前置到它们，来增强RAG。这可以提高检索质量，并防止生成不相关的响应。\n",
     "\n",
     "## Steps in this Notebook:\n",
+    "## 此笔记本的步骤如下：\n",
     "\n",
-    "1. **Data Ingestion**: Load and preprocess the text data.\n",
-    "2. **Chunking with Contextual Headers**: Extract section titles and prepend them to chunks.\n",
-    "3. **Embedding Creation**: Convert context-enhanced chunks into numerical representations.\n",
-    "4. **Semantic Search**: Retrieve relevant chunks based on a user query.\n",
-    "5. **Response Generation**: Use a language model to generate a response from retrieved text.\n",
-    "6. **Evaluation**: Assess response accuracy using a scoring system."
+    "1. **Data Ingestion**: Load and preprocess the text data. 数据摄取：加载和预处理文本数据。\n",
+    "2. **Chunking with Contextual Headers**: Extract section titles and prepend them to chunks. 分块与上下文标题：提取部分标题并将其前置到分块中。\n",
+    "3. **Embedding Creation**: Convert context-enhanced chunks into numerical representations. 嵌入创建：将增强上下文的分块转换为数值表示。\n",
+    "4. **Semantic Search**: Retrieve relevant chunks based on a user query. 语义搜索：基于用户查询检索相关的分块。\n",
+    "5. **Response Generation**: Use a language model to generate a response from retrieved text. 响应生成：使用语言模型从检索到的文本生成响应。\n",
+    "6. **Evaluation**: Assess response accuracy using a scoring system. 评估：使用评分系统评估响应准确性。"
    ]
   },
   {
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_chunk_header(chunk, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_chunk_header(chunk, model=\"THUDM/GLM-4-9B-0414\"):\n",
     "    \"\"\"\n",
     "    Generates a title/header for a given text chunk using an LLM.\n",
     "\n",
@@ -193,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "Sample Chunk:\n",
-      "Header: \"Introduction to Artificial Intelligence: Understanding the Foundations and Evolution\"\n",
+      "Header: \"Chapter 1: Introduction to Artificial Intelligence and Its Historical Context\"\n",
       "Content: Understanding Artificial Intelligence \n",
       "Chapter 1: Introduction to Artificial Intelligence \n",
       "Artificial intelligence (AI) refers to the ability of a digital computer or computer-controlled robot \n",
@@ -241,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(text, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(text, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Creates embeddings for the given text.\n",
     "\n",
@@ -270,7 +274,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating embeddings: 100%|██████████| 42/42 [02:56<00:00,  4.21s/it]\n"
+      "Generating embeddings:   0%|          | 0/42 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating embeddings: 100%|██████████| 42/42 [00:14<00:00,  2.94it/s]\n"
      ]
     }
    ],
@@ -373,7 +384,7 @@
      "output_type": "stream",
      "text": [
       "Query: What is 'Explainable AI' and why is it considered important?\n",
-      "Header 1: \"Building Trust in AI: Addressing Transparency, Explainability, and Accountability\"\n",
+      "Header 1: **Challenges and Trust Factors in AI Development**\n",
       "Content:\n",
       "systems. Explainable AI (XAI) \n",
       "techniques aim to make AI decisions more understandable, enabling users to assess their \n",
@@ -394,25 +405,25 @@
       "Robustness and Reliability \n",
       "\n",
       "\n",
-      "Header 2: \"Building Trust in AI: Essential Factors for Reliability and Fairness\"\n",
+      "Header 2: \"AI-Driven Environmental Monitoring, Deep Learning Advances, and Explainable AI Research\"\n",
       "Content:\n",
-      "to building trust in AI. Making AI systems understandable \n",
-      "and providing insights into their decision-making processes helps users assess their reliability \n",
-      "and fairness. \n",
-      "Robustness and Reliability \n",
-      "Ensuring that AI systems are robust and reliable is essential for building trust. This includes \n",
-      "testing and validating AI models, monitoring their performance, and addressing potential \n",
-      "vulnerabilities. \n",
-      "User Control and Agency \n",
-      "Empowering users with control over AI systems and providing them with agency in their \n",
-      "interactions with AI enhances trust. This includes allowing users to customize AI settings, \n",
-      "understand how their data is used, and opt out of AI-driven features. \n",
-      "Ethical Design and Development \n",
-      "Incorporating ethical considerations into the design and development of AI systems is crucial for \n",
-      "building trust. This includes conducting ethical impact assessments, engaging stakeholders, and \n",
-      "adhering to ethical guidelines and standards. \n",
-      "Public Engagement and Education \n",
-      "Engaging th\n",
+      " incidents. \n",
+      "Environmental Monitoring \n",
+      "AI-powered environmental monitoring systems track air and water quality, detect pollution, and \n",
+      "support environmental protection efforts. These systems provide real-time data, identify \n",
+      "pollution sources, and inform environmental policies. \n",
+      "Chapter 15: The Future of AI Research \n",
+      "Advancements in Deep Learning \n",
+      "Continued advancements in deep learning are expected to drive further breakthroughs in AI. \n",
+      "Research is focused on developing more efficient and interpretable deep learning models, as well \n",
+      "as exploring new architectures and training techniques. \n",
+      "Explainable AI (XAI) \n",
+      "Explainable AI (XAI) aims to make AI systems more transparent and understandable. Research in \n",
+      "XAI focuses on developing methods for explaining AI decisions, enhancing trust, and improving \n",
+      "accountability. \n",
+      "AI and Neuroscience \n",
+      "The intersection of AI and neuroscience is a promising area of research. Understanding the \n",
+      "human brain can inspire new AI algorithms and architectures, \n",
       "\n"
      ]
     }
@@ -450,7 +461,7 @@
     "# Define the system prompt for the AI assistant\n",
     "system_prompt = \"You are an AI assistant that strictly answers based on the given context. If the answer cannot be derived directly from the provided context, respond with: 'I do not have enough information to answer that.'\"\n",
     "\n",
-    "def generate_response(system_prompt, user_message, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_response(system_prompt, user_message, model=\"THUDM/GLM-4-9B-0414\"):\n",
     "    \"\"\"\n",
     "    Generates a response from the AI model based on the system prompt and user message.\n",
     "\n",
@@ -490,14 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Score: 0.5\n"
+      "Evaluation Score: \n",
+      "1\n",
+      "The AI response accurately defines Explainable AI (XAI) as making AI decisions more understandable and transparent, and correctly states its importance for building trust, accountability, and ensuring fairness. The response aligns closely with the true answer.\n"
      ]
     }
    ],
@@ -508,7 +521,7 @@
     "- Assign a score of 1 if the response is very close to the true answer. \n",
     "- Assign a score of 0.5 if the response is partially correct. \n",
     "- Assign a score of 0 if the response is incorrect.\n",
-    "Return only the score (0, 0.5, or 1).\"\"\"\n",
+    "Return only the score (0, 0.5, or 1). explain your reasoning briefly.\"\"\"\n",
     "\n",
     "# Extract the ground truth answer from validation data\n",
     "true_answer = data[0]['ideal_answer']\n",
@@ -531,7 +544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -545,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
