--- a/05_上下文分块标题.ipynb
+++ b/05_上下文分块标题.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_chunk_header(chunk, model=\"THUDM/GLM-4-9B-0414\"):\n",
+    "def generate_chunk_header(chunk, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Generates a title/header for a given text chunk using an LLM.\n",
     "\n",
@@ -197,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "Sample Chunk:\n",
-      "Header: \"Chapter 1: Introduction to Artificial Intelligence and Its Historical Context\"\n",
+      "Header: **\"Introduction to Artificial Intelligence: History and Fundamentals\"**\n",
       "Content: Understanding Artificial Intelligence \n",
       "Chapter 1: Introduction to Artificial Intelligence \n",
       "Artificial intelligence (AI) refers to the ability of a digital computer or computer-controlled robot \n",
@@ -274,14 +274,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating embeddings:   0%|          | 0/42 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Generating embeddings: 100%|██████████| 42/42 [00:14<00:00,  2.94it/s]\n"
+      "Generating embeddings: 100%|██████████| 42/42 [00:07<00:00,  5.77it/s]\n"
      ]
     }
    ],
@@ -384,7 +377,7 @@
      "output_type": "stream",
      "text": [
       "Query: What is 'Explainable AI' and why is it considered important?\n",
-      "Header 1: **Challenges and Trust Factors in AI Development**\n",
+      "Header 1: \"Key Principles for Ethical and Trustworthy AI: Explainability, Privacy, and Accountability\"\n",
       "Content:\n",
       "systems. Explainable AI (XAI) \n",
       "techniques aim to make AI decisions more understandable, enabling users to assess their \n",
@@ -405,25 +398,27 @@
       "Robustness and Reliability \n",
       "\n",
       "\n",
-      "Header 2: \"AI-Driven Environmental Monitoring, Deep Learning Advances, and Explainable AI Research\"\n",
+      "Header 2: **Key Challenges in AI: Transparency, Privacy, Job Displacement, Autonomy, and Weaponization**\n",
       "Content:\n",
-      " incidents. \n",
-      "Environmental Monitoring \n",
-      "AI-powered environmental monitoring systems track air and water quality, detect pollution, and \n",
-      "support environmental protection efforts. These systems provide real-time data, identify \n",
-      "pollution sources, and inform environmental policies. \n",
-      "Chapter 15: The Future of AI Research \n",
-      "Advancements in Deep Learning \n",
-      "Continued advancements in deep learning are expected to drive further breakthroughs in AI. \n",
-      "Research is focused on developing more efficient and interpretable deep learning models, as well \n",
-      "as exploring new architectures and training techniques. \n",
-      "Explainable AI (XAI) \n",
-      "Explainable AI (XAI) aims to make AI systems more transparent and understandable. Research in \n",
-      "XAI focuses on developing methods for explaining AI decisions, enhancing trust, and improving \n",
-      "accountability. \n",
-      "AI and Neuroscience \n",
-      "The intersection of AI and neuroscience is a promising area of research. Understanding the \n",
-      "human brain can inspire new AI algorithms and architectures, \n",
+      "inability \n",
+      "Many AI systems, particularly deep learning models, are \"black boxes,\" making it difficult to \n",
+      "understand how they arrive at their decisions. Enhancing transparency and explainability is \n",
+      "crucial for building trust and accountability. \n",
+      " \n",
+      " \n",
+      "Privacy and Security \n",
+      "AI systems often rely on large amounts of data, raising concerns about privacy and data security. \n",
+      "Protecting sensitive information and ensuring responsible data handling are essential. \n",
+      "Job Displacement \n",
+      "The automation capabilities of AI have raised concerns about job displacement, particularly in \n",
+      "industries with repetitive or routine tasks. Addressing the potential economic and social impacts \n",
+      "of AI-driven automation is a key challenge. \n",
+      "Autonomy and Control \n",
+      "As AI systems become more autonomous, questions arise about control, accountability, and the \n",
+      "potential for unintended consequences. Establishing clear guidelines and ethical frameworks for \n",
+      "AI development and deployment is crucial. \n",
+      "Weaponization of AI \n",
+      "The p\n",
       "\n"
      ]
     }
@@ -461,7 +456,7 @@
     "# Define the system prompt for the AI assistant\n",
     "system_prompt = \"You are an AI assistant that strictly answers based on the given context. If the answer cannot be derived directly from the provided context, respond with: 'I do not have enough information to answer that.'\"\n",
     "\n",
-    "def generate_response(system_prompt, user_message, model=\"THUDM/GLM-4-9B-0414\"):\n",
+    "def generate_response(system_prompt, user_message, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Generates a response from the AI model based on the system prompt and user message.\n",
     "\n",
@@ -501,16 +496,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Score: \n",
-      "1\n",
-      "The AI response accurately defines Explainable AI (XAI) as making AI decisions more understandable and transparent, and correctly states its importance for building trust, accountability, and ensuring fairness. The response aligns closely with the true answer.\n"
+      "Evaluation Score: 1\n",
+      "\n",
+      "The AI assistant's response is very close to the true answer. It accurately defines Explainable AI (XAI) as techniques aimed at making AI decisions more understandable and emphasizes the importance of transparency, trust, and fairness in AI systems. The response also mentions the \"black box\" nature of AI models, which aligns with the true answer's focus on transparency and accountability. The only minor difference is the additional detail about assessing fairness and accuracy, which complements the true answer without contradicting it.\n"
      ]
     }
    ],
