--- a/06_文档增强RAG.ipynb
+++ b/06_文档增强RAG.ipynb
@@ -9,19 +9,30 @@
    },
    "source": [
     "# Document Augmentation RAG with Question Generation\n",
+    "# 文档增强RAG与问句生成\n",
     "\n",
-    "This notebook implements an enhanced RAG approach using document augmentation through question generation. By generating relevant questions for each text chunk, we improve the retrieval process, leading to better responses from the language model.\n",
+    "This notebook implements an enhanced RAG approach using document augmentation through question generation. By generating relevant questions for each text chunk, we improve the retrieval process, leading to better responses from the language model.  \n",
+    "本笔记本实现了一种增强的RAG方法，通过问句生成进行文档增强。通过为每个文本块生成相关问题，我们改善了检索过程，从而使语言模型能够生成更好的响应。\n",
     "\n",
-    "In this implementation, we follow these steps:\n",
+    "In this implementation, we follow these steps:  \n",
+    "在此次实现中，我们按照以下步骤进行：\n",
     "\n",
-    "1. **Data Ingestion**: Extract text from a PDF file.\n",
-    "2. **Chunking**: Split the text into manageable chunks.\n",
-    "3. **Question Generation**: Generate relevant questions for each chunk.\n",
-    "4. **Embedding Creation**: Create embeddings for both chunks and generated questions.\n",
-    "5. **Vector Store Creation**: Build a simple vector store using NumPy.\n",
-    "6. **Semantic Search**: Retrieve relevant chunks and questions for user queries.\n",
-    "7. **Response Generation**: Generate answers based on retrieved content.\n",
-    "8. **Evaluation**: Assess the quality of the generated responses."
+    "1. **Data Ingestion**: Extract text from a PDF file.  \n",
+    "数据引入：从PDF文件中提取文本。\n",
+    "2. **Chunking**: Split the text into manageable chunks.  \n",
+    "分块：将文本分割成可管理的块。\n",
+    "3. **Question Generation**: Generate relevant questions for each chunk.  \n",
+    "问句生成：为每个块生成相关问题。\n",
+    "4. **Embedding Creation**: Create embeddings for both chunks and generated questions.  \n",
+    "嵌入创建：为块和生成的问题创建嵌入。\n",
+    "5. **Vector Store Creation**: Build a simple vector store using NumPy.  \n",
+    "向量存储创建：使用NumPy构建简单向量存储。\n",
+    "6. **Semantic Search**: Retrieve relevant chunks and questions for user queries.  \n",
+    "语义搜索：为用户查询检索相关块和问题。\n",
+    "7. **Response Generation**: Generate answers based on retrieved content.  \n",
+    "响应生成：基于检索到的内容生成答案。\n",
+    "8. **Evaluation**: Assess the quality of the generated responses.  \n",
+    "评估：评估生成的响应的质量。"
    ]
   },
   {
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_questions(text_chunk, num_questions=5, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_questions(text_chunk, num_questions=5, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Generates relevant questions that can be answered from the given text chunk.\n",
     "\n",
@@ -217,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(text, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(text, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Creates embeddings for the given text using the specified OpenAI model.\n",
     "\n",
@@ -408,14 +419,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Chunks: 100%|██████████| 42/42 [01:30<00:00,  2.15s/it]"
+      "Processing Chunks: 100%|██████████| 42/42 [02:04<00:00,  2.97s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vector store contains 165 items\n"
+      "Vector store contains 168 items\n"
      ]
     },
     {
@@ -500,25 +511,25 @@
       "Relevant Document Chunks:\n",
       "\n",
       "Matched Questions:\n",
-      "Question 1 (similarity: 0.8629):\n",
-      "What is the main goal of Explainable AI (XAI)?\n",
+      "Question 1 (similarity: 0.8587):\n",
+      "What is the purpose of Explainable AI (XAI)?\n",
       "From chunk 10\n",
       "=====================================\n",
-      "Question 2 (similarity: 0.8488):\n",
-      "What is the primary goal of Explainable AI (XAI) techniques?\n",
-      "From chunk 37\n",
-      "=====================================\n",
-      "Question 3 (similarity: 0.8414):\n",
-      "What is the focus of research on Explainable AI (XAI)?\n",
+      "Question 2 (similarity: 0.8416):\n",
+      "What is the goal of Explainable AI (XAI)?\n",
       "From chunk 29\n",
       "=====================================\n",
-      "Question 4 (similarity: 0.7995):\n",
-      "Why are transparency and explainability essential for building trust in AI systems?\n",
+      "Question 3 (similarity: 0.8337):\n",
+      "Why are transparency and explainability important for AI systems?\n",
       "From chunk 36\n",
       "=====================================\n",
-      "Question 5 (similarity: 0.7841):\n",
-      "Why is transparency and explainability essential in building trust and accountability with AI systems?\n",
+      "Question 4 (similarity: 0.8217):\n",
+      "Why is enhancing transparency and explainability important for AI systems?\n",
       "From chunk 9\n",
+      "=====================================\n",
+      "Question 5 (similarity: 0.8215):\n",
+      "What is the purpose of Explainable AI (XAI) techniques?\n",
+      "From chunk 37\n",
       "=====================================\n"
      ]
     }
@@ -624,7 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_response(query, context, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_response(query, context, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Generates a response based on the query and context.\n",
     "\n",
@@ -679,7 +690,7 @@
       "Query: What is 'Explainable AI' and why is it considered important?\n",
       "\n",
       "Response:\n",
-      "Explainable AI (XAI) is a field that aims to make AI systems more transparent and understandable by providing insights into how AI models make decisions. This is essential for building trust and accountability in AI systems, as it enables users to assess their fairness and accuracy. XAI techniques are crucial for addressing potential harms, ensuring ethical behavior, and establishing clear guidelines and ethical frameworks for AI development and deployment.\n"
+      "Explainable AI (XAI) aims to make AI systems more transparent and understandable by providing insights into how AI models make decisions. It is considered important because it enhances trust, accountability, and fairness by enabling users to assess the reliability and accuracy of AI decisions. Transparency and explainability are crucial for addressing biases, ensuring ethical behavior, and building public confidence in AI systems.\n"
      ]
     }
    ],
@@ -709,7 +720,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_response(query, response, reference_answer, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def evaluate_response(query, response, reference_answer, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Evaluates the AI response against a reference answer.\n",
     "    \n",
@@ -785,15 +796,15 @@
      "text": [
       "\n",
       "Evaluation:\n",
-      "Based on the evaluation criteria, I will assess the AI response as follows:\n",
+      "The AI response is very good, covering all the main points from the reference answer and even expanding slightly with additional details about addressing biases and building public confidence. \n",
       "\n",
-      "1. Factual correctness: The AI response contains accurate information about Explainable AI (XAI) and its importance. It correctly states that XAI aims to make AI systems more transparent and understandable, providing insights into how they make decisions.\n",
+      "Here's the breakdown:\n",
+      "1. **Factual correctness**: The response accurately describes Explainable AI (XAI) and its importance.  \n",
+      "2. **Completeness**: It includes all key aspects from the reference (transparency, trust, accountability, fairness) and adds relevant details (biases, ethical behavior, public confidence).  \n",
+      "3. **Relevance**: The response directly addresses the question without straying from the topic.  \n",
       "\n",
-      "2. Completeness: The AI response covers the main points of XAI, including its importance for building trust, accountability, and ensuring fairness in AI systems. However, it misses some details, such as the potential harms that XAI can address and the need for clear guidelines and ethical frameworks for AI development and deployment.\n",
-      "\n",
-      "3. Relevance: The AI response directly addresses the question, providing a clear and concise explanation of XAI and its significance.\n",
-      "\n",
-      "Based on the evaluation, I would assign a score of 0.8 to the AI response. The response is very good, with minor omissions and differences from the reference answer. It covers the main points of XAI and its importance, but misses some details that are present in the reference answer.\n"
+      "**Score: 0.9**  \n",
+      "Justification: The response matches the reference almost perfectly in content and meaning, with minor but useful additions that enhance understanding. The extra details do not detract from the core message and are factually correct. A slight deduction (from 1.0 to 0.9) is given only because the reference answer is more concise, but the AI's elaboration is beneficial.\n"
      ]
     }
    ],
@@ -876,7 +887,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(text, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(text, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Creates embeddings for the given text using the specified OpenAI model.\n",
     "\n",
@@ -1002,23 +1013,25 @@
       "\n",
       "=====================================\n",
       "Context 2:\n",
-      " incidents. \n",
-      "Environmental Monitoring \n",
-      "AI-powered environmental monitoring systems track air and water quality, detect pollution, and \n",
-      "support environmental protection efforts. These systems provide real-time data, identify \n",
-      "pollution sources, and inform environmental policies. \n",
-      "Chapter 15: The Future of AI Research \n",
-      "Advancements in Deep Learning \n",
-      "Continued advancements in deep learning are expected to drive further breakthroughs in AI. \n",
-      "Research is focused on developing more efficient and interpretable deep learning models, as well \n",
-      "as exploring new architectures and training techniques. \n",
-      "Explainable AI (XAI) \n",
-      "Explainable AI (XAI) aims to make AI systems more transparent and understandable. Research in \n",
-      "XAI focuses on developing methods for explaining AI decisions, enhancing trust, and improving \n",
-      "accountability. \n",
-      "AI and Neuroscience \n",
-      "The intersection of AI and neuroscience is a promising area of research. Understanding the \n",
-      "human brain can inspire new AI algorithms and architectures, \n",
+      "inability \n",
+      "Many AI systems, particularly deep learning models, are \"black boxes,\" making it difficult to \n",
+      "understand how they arrive at their decisions. Enhancing transparency and explainability is \n",
+      "crucial for building trust and accountability. \n",
+      " \n",
+      " \n",
+      "Privacy and Security \n",
+      "AI systems often rely on large amounts of data, raising concerns about privacy and data security. \n",
+      "Protecting sensitive information and ensuring responsible data handling are essential. \n",
+      "Job Displacement \n",
+      "The automation capabilities of AI have raised concerns about job displacement, particularly in \n",
+      "industries with repetitive or routine tasks. Addressing the potential economic and social impacts \n",
+      "of AI-driven automation is a key challenge. \n",
+      "Autonomy and Control \n",
+      "As AI systems become more autonomous, questions arise about control, accountability, and the \n",
+      "potential for unintended consequences. Establishing clear guidelines and ethical frameworks for \n",
+      "AI development and deployment is crucial. \n",
+      "Weaponization of AI \n",
+      "The p\n",
       "=====================================\n"
      ]
     }
@@ -1058,7 +1071,7 @@
     "# Define the system prompt for the AI assistant\n",
     "system_prompt = \"You are an AI assistant that strictly answers based on the given context. If the answer cannot be derived directly from the provided context, respond with: 'I do not have enough information to answer that.'\"\n",
     "\n",
-    "def generate_response(system_prompt, user_message, model=\"meta-llama/Llama-3.2-3B-Instruct\"):\n",
+    "def generate_response(system_prompt, user_message, model=\"deepseek-ai/DeepSeek-V3\"):\n",
     "    \"\"\"\n",
     "    Generates a response from the AI model based on the system prompt and user message.\n",
     "\n",
@@ -1105,13 +1118,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the evaluation criteria, I would assign a score of 0.8 to the AI assistant's response.\n",
+      "The AI assistant's response is very close to the true response. It accurately defines Explainable AI (XAI) and highlights its importance for transparency, trust, accountability, and fairness. The additional detail about deep learning models being \"black boxes\" adds value without detracting from the core message. \n",
       "\n",
-      "The response is very close to the true response, and it correctly conveys the main idea of Explainable AI (XAI) and its importance. The AI assistant has successfully identified the primary goal of XAI, its significance in building trust and accountability, and its relevance to areas such as privacy and data protection.\n",
-      "\n",
-      "However, the response could be improved by providing more specific details and examples to support the claims made. For instance, the AI assistant could have elaborated on the techniques used in XAI, such as model interpretability, feature attribution, and explainability metrics. Additionally, the response could have provided more concrete examples of how XAI is being applied in various fields, such as healthcare and finance.\n",
-      "\n",
-      "Overall, the response is a good start, but it could benefit from more depth and specificity to make it more accurate and informative.\n"
+      "Score: 1\n"
      ]
     }
    ],
@@ -1132,7 +1141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -1146,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
